# seadash-panel

./: CMakeLists.txt  CMakeUserPresets.json  README.md
seadash-panel/: CMakeLists.txt  TitleBarWindow.qml  main.cpp  main.qml  qml.qrc
seadash-panel/images/: PersonDrowning.qml
